Fix annoying flicker when in admin view and clicking on admin console link

--- a/web-ui/src/main/resources/catalog/style/gn_admin.less
+++ b/web-ui/src/main/resources/catalog/style/gn_admin.less
@@ -65,7 +65,7 @@ fieldset.cswCriteriaInfo, ul.list-group {
 }
 ul.error-message {
   .left-offset {
-    left: -2em;
+  left: -2em;
   }
 
   overflow-x: auto;
@@ -103,4 +103,8 @@ ul.error-message {
 }
 .thread-state-TERMINATED {
   background-color: LIGHTGRAY;
+}
+
+#admin-console-link {
+  cursor: pointer;
 }
